--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -144,6 +143,9 @@ p{
     width: 500px; 
     height: 500px; 
     object-fit: cover; 
+    border: rgb(102, 48, 48) solid 8px;
+    border-radius: 5px;
+
 }
 #snak{
     text-align: center;
